java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: exercise
spec:
  replicas: 3
  selector:
    matchlabels:
      app: java-app
  template:
    metadata:
      labels: java-app
    spec:
      imagePullSecrets:
        - name: docker-hub
      containers:
      - name: java-app
        image: tsmallwood23/my-repo:java-mysqlv1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-app
  namespace: exercise
spec:
  selector:
    app: java-app
ports:
- protocol: TCP
  targetPort: 8080
  port: 8080
